Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
           <h2>
 <a name="learning-labview" class="anchor" href="#learning-labview"><span class="octicon octicon-link"></span></a>Learning LabVIEW</h2>
 
-<p>The training set that 2067 uses, which contains various programming exercises, has its own GitHub repository.</p>
+<p>The training set that 2067 uses, which contains various programming exercises, has its own GitHub repository. Click the above button, and fork the Training repository if you're solving them as a part of the LabVIEW classes.</p>
 
-<p>For some other resources, here are a few links:</p>
+<p>If you're looking for the presentations we used in the LabVIEW classes, here you go:
+(links)</p>
+
+<p>For some other resources, here are a few links:
+(links)</p>
         </section>
 
         <footer>
