Testing some stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Apple Pi: FRC Team 2067 by applepi-2067</title>
+    <title>Apple Pi: FRC Team 2067</title>
   </head>
 
   <body>
@@ -35,7 +35,9 @@
 <p>The training set that 2067 uses, which contains various programming exercises, has its own GitHub repository. Click the above button, and fork the Training repository if you're solving them as a part of the LabVIEW classes.</p>
 
 <p>If you're looking for the presentations we used in the LabVIEW classes, here you go:
-(links)</p>
+<url=http://applepirobotics.org>test</url>
+<url=http://applepirobotics.org>test</url>
+</p>
 
 <p>For some other resources, here are a few links:
 (links)</p>
