--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <p>The training set that 2067 uses, which contains various programming exercises, has its own GitHub repository. Click the above button, and fork the Training repository if you're solving them as a part of the LabVIEW classes.</p>
 
 <p>If you're looking for the presentations we used in the LabVIEW classes, here you go:
-<url=http://applepirobotics.org>test</url>
-<url=http://applepirobotics.org>test</url>
+<a href="http://applepirobotics.org">test</a>
+<a href="http://applepirobotics.org">test</a>
 </p>
 
 <p>For some other resources, here are a few links:
