Fixed button label that was too long "View Presentation" -> "View Guide"

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <section id="main_content">
 		<h2>Swerve Drive</h2>
 		<p> An ongoing project on Team 2067 is developing our swerve drive. To see our code, visit our GitHub repository for the 2014 Robot Code.
-	    If you're interested in understanding how it works, you can view this presentation which goes over the code in detail.<p>
+	    If you're interested in understanding how it works, you can look at this guide which goes over the code in detail.<p>
 
 		<a href="https://github.com/applepi-2067/Robot-2014" id="view-on-github" class="button"><span>View Repository</span></a>	
 		<a href="https://docs.google.com/presentation/d/1ld138sjkKKB-gnROHhTQ6dhQ7aGEmPLmHTZp7XINAdI/edit#slide=id.p" 
-				id="view-on-drive" class="button"><span>View Presentation</span></a>
+				id="view-on-drive" class="button"><span>View Guide</span></a>
 		<br><br> <!-- There's probably a better way of separating these -->
 		
 		<h2>AppleScript</h2>
