Uploaded swerve game

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         <section id="main_content">
 		<h2>Swerve Drive</h2>
+		<a href="./swerve/index.html">test game</a>
 		<p> An ongoing project on Team 2067 is developing our swerve drive. To see our code, visit our GitHub repository for the 2014 Robot Code.
 	    If you're interested in understanding how it works, you can look at this guide which goes over the code in detail.<p>
 
