Added description of swerve game to index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/applepi-2067" id="view-on-github" class="button"><span>View on GitHub</span></a>
-		  
 		  <a href="http://applepirobotics.org" id="applepi" class="button"><span>Our Main Site</span></a>
         </section>
 
@@ -32,8 +31,7 @@
 
         <section id="main_content">
 		<h2>Swerve Drive</h2>
-		<a href="./swerve/index.html">test game</a>
-		<p> An ongoing project on Team 2067 is developing our swerve drive. To see our code, visit our GitHub repository for the 2014 Robot Code.
+		<p>An ongoing project on Team 2067 is developing our swerve drive. To see our code, visit our GitHub repository for the 2014 Robot Code.
 	    If you're interested in understanding how it works, you can look at this guide which goes over the code in detail.<p>
 
 		<a href="https://github.com/applepi-2067/Robot-2014" id="view-on-github" class="button"><span>View Repository</span></a>	
@@ -41,8 +39,14 @@
 				id="view-on-drive" class="button"><span>View Guide</span></a>
 		<br><br> <!-- There's probably a better way of separating these -->
 		
+		<p>There is also a swerve drive game, which is a simulation of Aerial Assist with a swerve drive robot. The game is open source and
+		can be found on cory2067's GitHub.</p>
+		<a href="https://github.com/cory2067/Swerve-Game-2014" id="view-on-github" class="button"><span>View Repository</span></a>
+		<a href="./swerve" id="applepi" class="button"><span>Play Game</span></a>
+		<br><br><br>
+		
 		<h2>AppleScript</h2>
-		<p> AppleScript is a scripting language which is used to write sequences of commands for autonomous mode. The code behind each command is
+		<p>AppleScript is a scripting language which is used to write sequences of commands for autonomous mode. The code behind each command is
 		written in LabVIEW, and integrating new commands into the AppleScript interpreter should be a simple task for any programmer. Once the commands
 		are written, writing a script to execute them is an even simpler task. Using AppleScript, even a fool from the mechanical team should be able to 
 		put together a complex auto routine without much hassle. Another benefit of AppleScript is that auto modes can be edited on the fly, without any 
